--- a/app/src/main/res/layout/activity_add_designations.xml
+++ b/app/src/main/res/layout/activity_add_designations.xml
@@ -19,10 +19,33 @@
         android:layout_marginTop="@dimen/margin_30"
         android:background="@color/white">
 
+        <!-- name -->
+        <com.incon.service.custom.view.CustomTextInputLayout
+            android:id="@+id/input_layout_name"
+            style="@style/Register_TextInputLayout"
+            android:hint="@string/register_name_hint"
+            app:errorEnabled="true"
+            app:fontName="fonts/OpenSans-Regular.ttf"
+            app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_name"
+                style="@style/Register_TextInputEditText"
+                android:focusable="true"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                android:maxLength="@integer/character_limit_200"
+                android:maxLines="1"
+                android:tag="1"
+                android:text="@={addDesignation.name}"/>
+
+        </com.incon.service.custom.view.CustomTextInputLayout>
+
         <!-- description -->
         <com.incon.service.custom.view.CustomTextInputLayout
             android:id="@+id/input_layout_description"
             style="@style/Register_TextInputLayout"
+            android:layout_below="@id/input_layout_name"
             android:hint="@string/register_description_hint"
             app:errorEnabled="true"
             app:fontName="fonts/OpenSans-Regular.ttf"
@@ -42,41 +65,16 @@
 
         </com.incon.service.custom.view.CustomTextInputLayout>
 
-        <!-- name -->
-        <com.incon.service.custom.view.CustomTextInputLayout
-            android:id="@+id/input_layout_name"
-            style="@style/Register_TextInputLayout"
-            android:layout_below="@+id/input_layout_description"
-            android:hint="@string/register_name_hint"
-            app:errorEnabled="true"
-            app:fontName="fonts/OpenSans-Regular.ttf"
-            app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/edittext_name"
-                style="@style/Register_TextInputEditText"
-                android:focusable="true"
-                android:imeOptions="actionNext"
-                android:inputType="textCapWords"
-                android:maxLength="@integer/character_limit_200"
-                android:maxLines="1"
-                android:tag="1"
-                android:text="@={addDesignation.name}"
-
-                />
-
-        </com.incon.service.custom.view.CustomTextInputLayout>
-
         <!-- service_center-->
         <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
             android:id="@+id/spinner_service_center"
             style="@style/spinnerItemStyle"
-            android:layout_below="@id/input_layout_name"
+            android:layout_below="@id/input_layout_description"
             android:layout_marginBottom="@dimen/margin_24"
             android:focusable="true"
             android:hint="@string/register__service_center_hint"
             android:tag="2"
-            android:text="@{addDesignation.serviceCenterName}"
+            android:text="@={addDesignation.serviceCenterName}"
             android:visibility="visible"
             app:met_floatingLabel="highlight"
             app:met_textColor="@color/colorForgotPasswordHintText"
