--- a/app/src/main/res/layout/activity_adduser.xml
+++ b/app/src/main/res/layout/activity_adduser.xml
@@ -218,47 +218,37 @@
                     android:background="@null"
                     android:onClick="@{() -> addUserActivity.onAddressClick()}"/>
 
-                <com.incon.service.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_register_service_CenterId"
-                    style="@style/Register_TextInputLayout"
+
+                <!-- service_center-->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_service_center_name"
+                    style="@style/spinnerItemStyle"
                     android:layout_below="@id/input_layout_register_address"
-                    android:hint="@string/service_center_id_hint"
-                    app:errorEnabled="true"
-                    app:fontName="fonts/OpenSans-Regular.ttf"
-                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
+                    android:layout_marginBottom="@dimen/margin_24"
+                    android:focusable="true"
+                    android:hint="@string/register__service_center_hint"
+                    android:tag="8"
+                    android:text="@={addUser.serviceCenterName}"
+                    android:visibility="visible"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_register_service_CenterId"
-                        style="@style/Register_TextInputEditText"
-                        android:focusable="true"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLength="@integer/character_limit_200"
-                        android:maxLines="1"
-                        android:tag="8"
-                        android:text="@={addUser.serviceCenterId}"/>
-                </com.incon.service.custom.view.CustomTextInputLayout>
 
-                <com.incon.service.custom.view.CustomTextInputLayout
-                    android:id="@+id/input_layout_register_service_CenterRoleId"
-                    style="@style/Register_TextInputLayout"
-                    android:layout_below="@id/input_layout_register_service_CenterId"
-                    android:hint="@string/service_cente_role_id_hint"
-                    app:errorEnabled="true"
-                    app:fontName="fonts/OpenSans-Regular.ttf"
-                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/edittext_register_service_CenterRoleId"
-                        style="@style/Register_TextInputEditText"
-                        android:focusable="true"
-                        android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
-                        android:maxLength="@integer/character_limit_200"
-                        android:maxLines="1"
-                        android:tag="9"
-                        android:text="@={addUser.serviceCenterRoleId}"/>
-                </com.incon.service.custom.view.CustomTextInputLayout>
+                <!-- service_center_designation-->
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/spinner_service_center_designation"
+                    style="@style/spinnerItemStyle"
+                    android:layout_below="@id/spinner_service_center_name"
+                    android:layout_marginBottom="@dimen/margin_24"
+                    android:focusable="true"
+                    android:hint="@string/register__service_center_hint"
+                    android:tag="8"
+                    android:text="@={addUser.serviceCenterDesignation}"
+                    android:visibility="visible"
+                    app:met_floatingLabel="highlight"
+                    app:met_textColor="@color/colorForgotPasswordHintText"
+                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>
 
 
             </RelativeLayout>
